# BBDays-Hackathon

main/: CMakeLists.txt  http_server.c  http_server.h  lora.c  main.c  tasks_settings.h  wifi.c  wifi.h
